--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --ignore client/ app.js",
+    "dev": "nodemon app.js",
     "start": "node app.js"
   },
   "dependencies": {
