--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "sequelize": "^6.19.0"
   }
